# zephyr-squad-jira-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  zephyr_squad_mcp.py
.cursor/: mcp-dot-json-example.json
jira/: jira_const.py  jira_service.py
src/zephyr_squad_jira_mcp/: zephyr_squad_jira_mcp.py
src/zephyr_squad_jira_mcp/jira/: jira_service.py
zephyr-squad/: zephyr_squad_token_gen.py
